--- a/styles/base.css
+++ b/styles/base.css
@@ -17,7 +17,7 @@ header {
 
 header h1 {
     padding: 30px;
-    font-size: 2 rem;
+    
 }
 
 nav ul {
@@ -25,17 +25,20 @@ nav ul {
     display: flex;
     justify-content: space-around;
     background-color: black;
+    color:white
 }
 
 nav a {
     text-decoration: none;
     color: white;
+    background-color: black;
     padding: 10px;
     display: block;  
 }
 
 nav ul :hover{
     color:papayawhip;
+    background-color: black;
 }
 
 
@@ -43,10 +46,12 @@ main {
     display: grid;
     grid-template-columns: 3fr 1fr;
     background-color: lightgray;
+    color:black;
 }
 
 main section {
     background-color: whitesmoke;
+    color: #000;
 }
 
 
@@ -64,6 +69,7 @@ h2 {
 
 .card {
     background-color: white;
+    color: #000;
     margin: 10px 10px 10px;
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -125,12 +131,15 @@ footer {
     text-align: center;   
     height: 5rem;
     background-color: #333;
+    color: white;
     
 }
 .paragraph-1{
     color: white;
     padding: 1rem;
+    background-color:#333;
 }
 .paragraph-2{
     color: yellow;
+    background-color:#333;
 }
