--- a/styles/base.css
+++ b/styles/base.css
@@ -4,11 +4,16 @@
     box-sizing: border-box;   
 }
 
-body {
+/*body {
     
     font-family: 'Roboto', sans-serif;
-}
-
+}*/
+.roboto-slab-body {
+    font-family: "Roboto Slab", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+  }
 header {
     background-color: #333;
     color: white;
