--- a/project/styles/siteplan.css
+++ b/project/styles/siteplan.css
@@ -11,6 +11,7 @@
     display: flex;
     flex-direction: column;
     background-color: #ffffff;
+    font-family: "Lato", sans-serif;
 }
   
   main {
@@ -72,8 +73,7 @@
   .navigation {
     display: flex;
     flex-direction: row;
-    gap: 3rem;
-    padding: auto;
+    gap: 2rem;
     font-size: 2vw;
     justify-content: space-between;
     list-style: none;
@@ -113,7 +113,6 @@
     border-radius: 10px;
     text-align: center;
     width: 35%;
-    max-width: auto;
     box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.5);
     animation: fadeIn 1s ease-in-out;
     }
@@ -168,7 +167,7 @@ p{
 
 .hero-message {
   position: absolute;
-  top: 35%;
+  top: 45%;
   left: 50%;
 }
 
@@ -266,12 +265,12 @@ button:hover {
     
     #menu {
       display: block;
-      font-size: 2rem;
+      font-size: 1.2rem;
       border: none;
       background: none;
       color: #000;
       position: absolute;
-      top: 0.25rem;
+      top: 0.05rem;
       right: 0.25rem;
       z-index: 1100;
     }
