--- a/project/styles/siteplan.css
+++ b/project/styles/siteplan.css
@@ -105,7 +105,7 @@
     top: 15%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: rgba(106, 27, 154, 0.6); 
+    background-color: rgba(106, 27, 154, 0.7); 
     color: white;
     padding: 1rem 2rem;
     font-size: clamp(2rem, 3vw, 3rem);
@@ -140,7 +140,7 @@
     font-size: larger;
 }
 h1 {
-    color: #4a148c;
+    color: #6a1b9a;
     margin-bottom: 20px;
 }
 
@@ -216,7 +216,7 @@ button:hover {
 
 
   footer {
-    background-color: #5a0e88; 
+    background-color: #6a1b9a; 
     color: white; 
     text-align: center;
     padding: 10px;
