--- a/styles/form.css
+++ b/styles/form.css
@@ -1,11 +1,12 @@
-/* Estilos generales */
+
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Lato", sans-serif;
+    font-size: larger;
     margin: 0;
     padding: 0;
     display: flex;
     flex-direction: column;
-    min-height: 100vh; /* Asegura que el body ocupe al menos el 100% de la altura de la ventana */
+    min-height: 100vh; 
 }
 
 header {
@@ -19,7 +20,7 @@ main {
     padding: 1rem;
     max-width: 800px;
     margin: 0 auto;
-    flex: 1; /* Hace que el contenido principal ocupe el espacio restante */
+    flex: 1; 
 }
 
 footer {
@@ -27,7 +28,7 @@ footer {
     color: #fff;
     text-align: center;
     padding: 1rem 0;
-    margin-top: auto; /* Empuja el footer hacia abajo */
+    margin-top: auto; 
 }
 .form-container {
     background-color: #fff;
